# aavDroneSoftware

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  postCreate.sh
AAVWORKSPACE/src/AAVSOFTWARE/: test.md
aav_ws/src/aav_bringup/: CMakeLists.txt  package.xml
aav_ws/src/aav_bringup/aav_worlds/: aav_runway.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_0/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_1/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_2/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_3/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_4/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_5/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_6/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_7/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_8/: model.config  model.sdf
aav_ws/src/aav_bringup/aav_worlds/GCP_9/: model.config  model.sdf
aav_ws/src/aav_bringup/launch/: aav_drone_launch.py  aav_simulation_launch.py
aav_ws/src/aav_interfaces/: CMakeLists.txt  package.xml
aav_ws/src/aav_interfaces/msg/: LatLong.msg  Mode.msg
aav_ws/src/aav_msgs/: CMakeLists.txt  package.xml
aav_ws/src/aav_msgs/msg/: DronePosition.msg  TargetPosition.msg
aav_ws/src/aav_software/: package.xml  setup.py
aav_ws/src/aav_software/aav_software/: location_logger.py  manavs_magic_code.py  object_alignment_controller.py  test_node.py  topic_converter.py
docker/: Dockerfile  ros_bashrc.sh  ssh_entry.sh
(+3 files in other folders)
