<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aav_software</name>
  <version>0.0.0</version>
  <description>Software for AAV Drone</description>
  <maintainer email="carterhawkins@vt.edu">Carter</maintainer>
  <license>GPL-3.0</license>

  <depend>rclpy</depend>
  <depend>aav_msgs</depend>
  <depend>ardupilot_msgs</depend>
  <depend>yolo_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
